--- a/CSSandHTML/Clock.html
+++ b/CSSandHTML/Clock.html
@@ -92,7 +92,7 @@
     .innershadow
     {
         position:absolute;
-        background:linear-gradient(black,#F0E9C8);
+        background:linear-gradient(black,#D4CEB1);
         height:200px;
         width:130px;
         margin:100px 115px;
