--- a/CSSandHTML/3D Banner.html
+++ b/CSSandHTML/3D Banner.html
@@ -29,7 +29,7 @@
     font-size: 40px;
     color: white;
     box-shadow: 0px 0px 10px 0px hsla(0,0%,0%,0.55);
-    opacity:0.5;
+    opacity:0.7;
 }
 
 </style>
@@ -61,10 +61,7 @@
         let yDeg=ypercent*5
 
         banner1.style.transform=`translateZ(0px) rotateX(${-yDeg*0.5}deg) rotateY(${xDeg*0.5}deg)`
-        banner1.style.opacity=1.5-Math.abs(xpercent+ypercent);
-        console.log(parent1.style.transform)
-        console.log(xpercent)
-        console.log(ypercent)
+        banner1.style.opacity=1.75-Math.sqrt(Math.pow(xpercent,2)+Math.pow(ypercent,2))
     })
 </script>
 <!-- Copyright (c) CoderMageFox. All rights reserved.
