--- a/CSSandHTML/login/login.html
+++ b/CSSandHTML/login/login.html
@@ -28,9 +28,8 @@
 
 <div class="info">Tips:<br>
 2017/05/30 已完成基本界面<br>
-2017/05/31 更换了配色。<br>
-2017/06/01 完成了邮箱验证<br>
-    已进行屏幕适配<br>
+2017/05/31 更换了配色，完成了邮箱验证<br>
+    已进行分辨率适配，未进行移动端适配<br>
     ToDo:<br>
     验证邮箱图标改变动画<br>
     样式调整<br>
